:star: fixing image alignment issues in residents pages

--- a/wp-content/themes/eyebeam2019/style.scss
+++ b/wp-content/themes/eyebeam2019/style.scss
@@ -2509,7 +2509,7 @@ figcaption {
 
 	.post .post-image {
 		/*max-width: 700px;*/
-		margin-left: auto;
+		// margin-left: auto;
 	}
 
 
@@ -2562,7 +2562,7 @@ figcaption {
 
 	.post-main.post-main-top figure {
 		width: 50%;
-		float: right;
+		// float: right;
 	}
 
 	.post .post-title {
